Added Customer Controller and changed dispatch servlet properties

--- a/src/main/resources/persistence-mysql.properties
+++ b/src/main/resources/persistence-mysql.properties
@@ -1,7 +1,7 @@
 #
 # JDBC connection properties
 #
-jdbc.driver=com.mysql.jdbc.Driver
+jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/web_customer_tracker?useSSL=false
 jdbc.user=springstudent
 jdbc.password=springstudent
@@ -19,4 +19,4 @@ connection.pool.maxIdleTime=3000
 #
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
-hibernate.packagesToScan=com.springrest.demo.entity
+hibernate.packagesToScan=main.java.com.springrest.demo.entity
