--- a/pom.xml
+++ b/pom.xml
@@ -92,26 +92,33 @@
 		    <version>5.2.0.RELEASE</version>
 		</dependency>
 		
+		<dependency>
+	        <groupId>org.apache.tomcat.embed</groupId>
+	        <artifactId>tomcat-embed-jasper</artifactId>
+	        <version>9.0.4</version>	        
+	    </dependency>		
+		
 		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
 		<dependency>
 		    <groupId>jstl</groupId>
 		    <artifactId>jstl</artifactId>
-		    <version>1.2</version>
+		    <version>1.2</version>		 
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
-	<!--<dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
+			<scope>provided</scope>
 		</dependency>
 		
-		https://mvnrepository.com/artifact/javax.servlet/jsp-api
+		<!-- https://mvnrepository.com/artifact/javax.servlet/jsp-api -->
 		<dependency>
 		    <groupId>javax.servlet</groupId>
 		    <artifactId>jsp-api</artifactId>
 		    <version>2.0</version>
 		    <scope>provided</scope>
-		</dependency>-->		
+		</dependency>		
 		<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
 		<dependency>
 		    <groupId>commons-logging</groupId>
@@ -147,6 +154,22 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.9.5</version>
 		</dependency>
+		
+		<!-- Spring Security -->
+		<!-- spring-security-web and spring-security-config -->
+		
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-web</artifactId>
+		    <version>5.2.1.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-config</artifactId>
+		    <version>5.2.1.RELEASE</version>
+		</dependency>
+		
 		
 	</dependencies>  
 </project>
